tests/agl/rejections/type/discarded_explicit_typed_exec.agl
exec::[text]("true")
print "unreachable"
